<resources>
    <string name="app_name">Learning App</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>

    <string name="lorem_long">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>

    <string name="title_activity_main2">Main2Activity</string>

    <string name="iqqfDefaultQuestionTitleLabel">Question ?</string>

    <string name="iqqfDefaultPointsRemainingLabel">Points Left</string>
    <string name="title_activity_root_delete_me">RootActivityDeleteMe</string>
    <string name="button_login">LOGIN</string>
    <string name="hint_user_name">User Name</string>
    <string name="not_me">Change User</string>
    <string name="is_me">Continue</string>
    <string name="add_new_quiz_button">Add New Quiz</string>
    <string name="groups_list_title">My Groups</string>
    <string name="quiz_code_fragment_title">Quiz Code</string>
    <string name="submit_quiz_code_button">Submit Code</string>
    <string name="quiz_list_title">My Quizzes</string>
    <string name="Quiz_Code_Manifest_Label">quiz_code_activity</string>
    <string name="group_name">Group Name</string>
    <string name="submit">Submit</string>
    <!--<string name="group_quiz_instructions">1. Please sit quietly until your instructor provides a code to begin the group quiz.\n-->
    <!--2. The members of your group are listed above. Please do not begin interacting with them until the instructor provides the code to begin.\n-->
    <!--3. Your group will repeat the questions in the previous quiz, this time discussing your answer choices as a group until you come to an agreement.\n-->
    <!--4. If the answer your group chose was incorrect, choose a new answer after discussing further. Repeat until the quiz is complete.-->
    <!--</string>-->
    <string name="enter_code">Enter</string>
    <string name="wait_for_code">Group Quiz</string>
    <string name="group_quiz_instructions">Instructions:</string>
    <string name="instruction_1">1. Please wait for the instructor to provide a quiz code.</string>
    <string name="instruction_2">2. When ready, enter the code and begin the group quiz.</string>
    <string name="instruction_3">3. Converse as a group and scatch off the correct answer to the question.</string>
    <string name="instruction_4">4. Each incorrect answer will deduct a point.</string>
    <string name="instruction_5">5. Hit submit when you are finished.</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_group_quiz_code">GroupQuizCodeActivity</string>
</resources>
