<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/group_quiz_instructions"
        android:id="@+id/instructionTextView"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/enter_code" />

    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_red_light"
        android:layout_below="@id/instructionTextView"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/instruction_1"
        android:id="@+id/quiz_instruction_1"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/view"
        android:layout_alignStart="@+id/instructionTextView" />

    <TextView
        android:id="@+id/quiz_instruction_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/instruction_2"
        android:layout_below="@+id/quiz_instruction_1"
        android:layout_alignStart="@+id/quiz_instruction_1" />

    <TextView
        android:id="@+id/quiz_instruction_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/instruction_3"
        android:layout_below="@+id/quiz_instruction_2"
        android:layout_alignStart="@+id/quiz_instruction_2" />

    <TextView
        android:id="@+id/quiz_instruction_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/instruction_4"
        android:layout_below="@+id/quiz_instruction_3"
        android:layout_alignStart="@+id/quiz_instruction_3" />

    <TextView
        android:id="@+id/quiz_instruction_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_alignStart="@+id/quiz_instruction_4"
        android:layout_below="@+id/quiz_instruction_4"
        android:text="@string/instruction_5" />

    <Button
        android:id="@+id/enter_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/enter_code"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp" />

</RelativeLayout>