<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.CardView
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/group_name_textview"
                    android:textSize="24sp"
                    android:text="@string/group_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <ListView
                    android:id="@+id/group_member_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    ></ListView>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:gravity="center"
                    android:text="Instructions"
                    android:textSize="24dp"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"/>

                <View
                    android:layout_width="256dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/colorAccent"
                    ></View>

                <ScrollView
                    android:padding="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="9">
                    <TextView
                        android:gravity="center"
                        android:textColor="#FFdddd"
                        android:lineSpacingExtra="2dp"
                        android:textSize="16sp"
                        android:id="@+id/instructions_textview"
                        android:text="@string/group_quiz_instructions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </ScrollView>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/group_quiz_code_edittext"
            android:hint="Group Quiz Code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"/>

        <Button
            android:id="@+id/submit_group_quiz_code_button"
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



</LinearLayout>