<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp"
    app:contentPadding="8dp"
    app:cardBackgroundColor="@color/colorCardBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/root_linear_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/question_number_tv"
                    android:text="@string/iqqfDefaultQuestionTitleLabel"
                    android:textColor="@color/colorIndividualQuizQuestionText"
                    android:gravity="center"
                    android:layout_weight="1"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/points_remaining_tv"
                    android:text="@string/iqqfDefaultPointsRemainingLabel"
                    android:gravity="center"
                    android:textColor="@color/colorIndividualQuizQuestionText"
                    android:layout_weight="1"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                >

                <android.support.v7.widget.CardView
                    android:id="@+id/question_card"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:contentPadding="8dp"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/question_text_tv"
                        android:text="@string/lorem_long"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:padding="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                    </ScrollView>

                </android.support.v7.widget.CardView>

                <!--Answers Card Views-->



                <android.support.v4.view.ViewPager
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:padding="4dp"
                    android:id="@+id/answer_pager">

                </android.support.v4.view.ViewPager>



                <!--<android.support.v7.widget.CardView-->
                    <!--android:id="@+id/answers_card"-->
                    <!--android:layout_margin="4dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content">-->

                    <!--<include layout="@layout/answer_fragment"></include>-->

                <!--</android.support.v7.widget.CardView>-->


            </LinearLayout>


            <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/next_btn"
                android:layout_gravity="right"
                android:textColor="@color/colorIndividualQuizQuestionText"
                android:background="@color/colorIndividualQuizQuestionNavigationButtonBackground"
                android:layout_weight="1" />


        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>

